<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Point</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="logo_image">logo</string>
    <string name="email_username">Email/Username</string>
    <string name="password">Password</string>
    <string name="passphrase">Passphrase</string>
    <string name="login">login</string>
    <string name="signup">signup</string>
    <string name="logo">logo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address_username_">Email Address (username)</string>
    <string name="confirm_passphrase">Confirm passphrase</string>
    <string name="zipcode">Zipcode</string>
    <string name="what_is_the_name_of_your_first_pet_">What is the name of your first pet?</string>
    <string name="what_is_your_mother_apos_s_maiden_name_">What is your mother\\&amp;apos;s maiden name?&amp;apos;s maiden name?</string>
    <string name="uploadimage">uploadimage</string>
    <string name="signupbutton">signupbutton</string>
    <string name="title_activity_sign_up">MainActivity</string>
    <string name="what_is_the_name_of_your_elementary_school_">What is the name of your elementary school?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_activitymain">Activitymain</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="title_activity_eventpage">Eventpage</string>
    <string name="title">title</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="activity">Activity</string>
    <string name="participants">Participants</string>
    <string name="title_activity_profile">Profile</string>
    <string name="comments">Comments</string>
    <string name="activities_participated_">Activities Participated:</string>
    <string name="signuptitle">SignUp</string>
    <string name="create_activity">create_activity</string>
    <string name="title_activity_create">Create Activity</string>
    <string name="what_is_the_name_of_you_elementary_school_">What is the name of you elementary school?</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="createactivity">createactivity</string>
    <string name="cancelbutton">cancelbutton</string>
    <string name="time_start">Time Start</string>
    <string name="time_end">Time End</string>
    <string name="cancel">cancel</string>
    <string name="button">Button</string>
    <string name="participate">participate</string>
    <string name="title_activity_activityinfo">Activityinfo</string>
    <string name="title_activity_eventinfo">Eventinfo</string>
    <string name="chat">chat</string>
    <string name="large_text">Large Text</string>
    <string name="small_text">Small Text</string>
    <string name="id">id</string>
    <string name="activity_description">activity description</string>
    <string name="_of_participants"># of Participants</string>
    <string name="icon">icon</string>
    <string name="abc">abc</string>
    <string name="profile_picture_">profile_picture_</string>
    <string name="todo">todo</string>
    <string name="aaa">aaa</string>
    <string name="something">something</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="date">Date</string>
    <string name="first_name_last_name">first name last name</string>
    <string name="title_activity_participate">Participate</string>
    <string name="title_activity_chatpage">Chatpage</string>
    <string name="say_something">Say something</string>
    <string name="send">send</string>
    <string name="_say_something">- Say Something</string>

</resources>
