<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.point.Activitymain" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item 
        android:id="@+id/refresh"
        android:title="@string/refresh"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"/>
    <item 
        android:id="@+id/search"
        android:title="@string/search"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"/>
    <item 
        android:id="@+id/profile"
        android:title="@string/profile"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"/>
    <item 
        android:id="@+id/logout"
        android:title="@string/logout"
        android:orderInCategory="4"
        android:showAsAction="ifRoom"/>

</menu>
